--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ GITHUB_REPOSITORY }}:${{ GITHUB_RUN_ID }}
+      run: docker build . --file Dockerfile --tag ${{ github.repository }}:${{ github.run_id }}
